# broadcast-datafeed

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  coverage.xml  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  publish-pypi.yml  python-uv-build.yml
src/broadcast/: __init__.py  datafeed.py  datafeeder.py
src/broadcast_datafeed/: __init__.py  datafeed.py
tests/: test_datafeed.py  test_datafeeder.py
