[project]
name = "broadcast-datafeed"
version = "1.0.0"
description = "Python client for interacting with the AEBroadcast Datafeed API service"
readme = "README.md"
authors = [
    { name = "Sylvio Campos Neto", email = "sylvio.campos@gmail.com.br" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.10",
]
